~fixed code added more classes